--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.4.0",
     "antd-init": "^2.0.6",
+    "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.3.0",
